# AiOps_OAi_Models__codex-5.5

.github/scripts/: verify_tui_core_boundary.py
codex-rs/: Cargo.toml
codex-rs/agent-identity/src/: lib.rs
codex-rs/analytics/src/: analytics_client_tests.rs  client.rs  client_tests.rs  events.rs  facts.rs  reducer.rs
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-client/src/: lib.rs
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  command_exec.rs  external_agent_config_api.rs  in_process.rs  lib.rs  message_processor.rs  outgoing_message.rs
codex-rs/apply-patch/src/: streaming_parser.rs
codex-rs/backend-client/src/: client.rs  types.rs
codex-rs/cli/src/: main.rs
codex-rs/cloud-requirements/src/: lib.rs
codex-rs/codex-api/src/: rate_limits.rs
codex-rs/config/src/: config_toml.rs  state.rs  types.rs
codex-rs/core/: config.schema.json
codex-rs/core-plugins/src/: remote.rs  store.rs
codex-rs/core/src/: client.rs  client_tests.rs  codex_thread.rs  compact.rs  connectors.rs  exec.rs  lib.rs  mcp_tool_call.rs  mcp_tool_call_tests.rs  prompt_debug.rs  safety_tests.rs  thread_manager.rs  thread_manager_tests.rs
codex-rs/exec-server/src/: environment.rs  lib.rs
codex-rs/exec/src/: lib.rs
codex-rs/features/src/: feature_configs.rs  lib.rs  tests.rs
codex-rs/mcp-server/src/: lib.rs  (+1 more)
codex-rs/models-manager/: models.json
codex-rs/thread-manager-sample/: Cargo.toml  README.md
codex-rs/thread-manager-sample/src/: main.rs
codex-rs/tui/: tooltips.txt
scripts/install/: install.ps1  install.sh
(+155 files in other folders)
